@@ -1,21 +1,19 @@
 package group5.swp.HarasyProject.service.impl;
 
-import group5.swp.HarasyProject.dto.response.ApiResponse;
-import group5.swp.HarasyProject.dto.response.reservation.ReservationResponse;
 import group5.swp.HarasyProject.entity.reservation.ReservationEntity;
-import group5.swp.HarasyProject.enums.ReservationStatus;
 import group5.swp.HarasyProject.mapper.ReservationMapper;
-
 import group5.swp.HarasyProject.repository.ReservationRepository;
 import group5.swp.HarasyProject.service.ReservationService;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.Query;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
@@ -25,71 +23,55 @@ public class ReservationServiceImpl implements ReservationService {
 
     ReservationRepository reservationRepository;
     ReservationMapper reservationMapper;
+    EntityManager entityManager;
 
     @Override
-    public ApiResponse<List<ReservationResponse>> getApprovedReservations() {
-        List<ReservationEntity> approvedReservations = reservationRepository.findAllByStatus(ReservationStatus.APPROVED);
+    public List<String> getAvailableTime(int branchId, String timeSlots, LocalDate date, int amountGuest) {
+        String sql = String.format("""
+                    select ts.slot_time
+                   from tables t
+                            left join reservation_table rt
+                                      on t.table_id = rt.table_id
+                            left join reservation r
+                                      on rt.reservation_id = r.reservation_id
+                            join (%s) AS ts (slot_time)
+                   where t.branch_id = :branchId
+                     and t.status = 'AVAILABLE'
+                     and (r.reservation_date is null
+                       or (
+                              r.reservation_date = :date
+                                  and (
+                                  r.status <> 'APPROVED'
+                                      or (
+                                      r.status = 'APPROVED'
+                                          and
+                                      r.reservation_time not between SUBTIME(slot_time, '1:30') AND ADDTIME(slot_time, '1:30')
+                                      )
+                                  )
+                              )
+                       or (r.reservation_date <> :date
+                           AND NOT EXISTS (SELECT 1
+                                           FROM reservation_table rt2
+                                                    JOIN reservation r2
+                                                         ON rt2.reservation_id = r2.reservation_id
+                                           WHERE r2.reservation_date = :date
+                                             AND rt2.table_id = t.table_id))
+                       )
+                   group by slot_time
+                   having sum(t.capacity) >= :amountGuest
+                   order by slot_time;
+                """, timeSlots);
 
-        List<ReservationResponse> reservationResponses = approvedReservations.stream()
-                .map(reservationMapper::toResponse)
-                .collect(Collectors.toList());
-
-        return ApiResponse.<List<ReservationResponse>>builder()
-                .data(reservationResponses)
-                .build();
+        Query query = entityManager.createNativeQuery(sql);
+        query.setParameter("amountGuest", amountGuest);
+        query.setParameter("branchId", branchId);
+        query.setParameter("date", date);
+        List list = query.getResultList();
+        return (List<String>) list.stream().map(l-> (String) l ).toList();
     }
 
     @Override
-    public ApiResponse<List<ReservationResponse>> searchReservationsByCustomerName(String customerName) {
-        // Fetch reservations based on the customer name
-        List<ReservationEntity> reservations = reservationRepository.findByCustomerName(customerName); // Assuming this method exists in the repository
-
-        if (reservations.isEmpty()) {
-            return ApiResponse.<List<ReservationResponse>>builder()
-                    .success(false)
-                    .message("No reservations found for customer: " + customerName)
-                    .code(404)
-                    .build();
-        }
-
-        // Convert to ReservationResponse nếu tìm thấy
-        List<ReservationResponse> reservationResponses = reservations.stream()
-                .map(reservationMapper::toResponse)
-                .collect(Collectors.toList());
-
-        return ApiResponse.<List<ReservationResponse>>builder()
-                .success(true)
-                .message("Reservations found for customer: " + customerName)
-                .data(reservationResponses)
-                .build();
-    }
-
-    @Override
-    public ApiResponse<ReservationResponse> updateReservationStatus(Integer reservationId) {
-        // Fetch reservation by ID
-        ReservationEntity reservation = reservationRepository.findById(reservationId)
-                .orElseThrow(() -> new IllegalArgumentException("Reservation not found with ID: " + reservationId));
-
-        // Check if the current status is APPROVED
-        if (reservation.getStatus() != ReservationStatus.APPROVED) {
-            return ApiResponse.<ReservationResponse>builder()
-                    .success(false)
-                    .message("Reservation status can only be updated from APPROVED to DONE")
-                    .code(400) // Bad Request
-                    .build();
-        }
-
-        // Update status to DONE
-        reservation.setStatus(ReservationStatus.DONE);
-        reservationRepository.save(reservation);
-
-        // Convert to ReservationResponse
-        ReservationResponse reservationResponse = reservationMapper.toResponse(reservation);
-
-        return ApiResponse.<ReservationResponse>builder()
-                .success(true)
-                .message("Reservation status updated successfully")
-                .data(reservationResponse)
-                .build();
+    public ReservationEntity saveReservation(ReservationEntity reservation) {
+        return reservationRepository.save(reservation);
     }
 }
